[package]
name = "TruchaSign"
version = "0.1.0"
edition = "2021"
description = "Advanced PE Authenticode signature cloning and injection tool for authorized security research and red team exercises."
license = "MIT OR Apache-2.0"
authors = ["Julio Iglesias Perez <julioiglesiasp@gmail.com> (merovingioops)"]
readme = "README.md"
repository = "https://github.com/merovingioops/TruchaSign"
homepage = "https://github.com/merovingioops/TruchaSign"
documentation = "https://github.com/merovingioops/TruchaSign#readme"
keywords = [
    "authenticode",
    "cybersecurity",
    "pentesting",
    "pe",
    "portable-executable",
    "red-teaming",
    "research",
    "windows",
    "windows-security"
]
categories = [
    "development-tools",
    "parser-implementations"
]

[[bin]]
name = "truchasign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
